Fix auction gallery spacing

--- a/pins/static/css/main-v1.3.css
+++ b/pins/static/css/main-v1.3.css
@@ -2277,7 +2277,7 @@ input[type='radio'] {
   margin-top: 10px;
 }
 
-.image-gallery, .merch-image-gallery {
+.image-gallery, .merch-image-gallery, .auction-image-gallery {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -2294,7 +2294,7 @@ input[type='radio'] {
   flex-basis: auto;
 }
 
-.merch-image-gallery>li {
+.merch-image-gallery>li, .auction-image-gallery>li {
   height: 300px;
   cursor: pointer;
   position: relative;
@@ -2303,7 +2303,7 @@ input[type='radio'] {
   flex-basis: auto;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 498px) {
   .merch-image-gallery>li {
     height: 160px;
   }
@@ -2315,7 +2315,13 @@ input[type='radio'] {
   }
 }
 
-.image-gallery li img, .merch-image-gallery li img {
+@media screen and (max-width: 767px) {
+  .auction-image-gallery>li {
+    height: 180px;
+  }
+}
+
+.image-gallery li img, .merch-image-gallery li img, .auction-image-gallery li img {
   object-fit: cover;
   width: 100%;
   height: 100%;
